# EmojiPicker-Optimized

./: CMakeLists.txt  CMakeLists.txt.user.282aae2  Main.qml  Model.qml  main.cpp  qml.qrc
